# nlp-sql-engine

./: .gitignore  README.md  commerce.db  main.py  pyproject.toml
config/: logging.py  settings.py
nlp_sql_engine/app/: bootstrap.py  cli.py  container.py  main.py  registry.py
nlp_sql_engine/app/factories/: infrastructure.py
nlp_sql_engine/config/: logging.py  settings.py
nlp_sql_engine/core/context/: pipeline.py
nlp_sql_engine/core/domain/: models.py
nlp_sql_engine/core/interfaces/: db.py  embedding.py  llm.py  manager.py  pipleline.py  vector_store.py
nlp_sql_engine/core/steps/: base.py  correction.py  generation.py  planning.py
nlp_sql_engine/infra/database/: federated_adapter.py  manager.py  sqlalchemy_adapter.py  sqlite_adapter.py
nlp_sql_engine/infra/embedding/: hf_adapter.py  local_embed_adapter.py  openai_embed_adapter.py
nlp_sql_engine/infra/llm/: local_adapter.py  mock_adapter.py  openai_adapter.py
nlp_sql_engine/infra/vector_store/: local_store.py
nlp_sql_engine/services/: gen_pipeline.py  schema_router.py  sql_generator.py
nlp_sql_engine/use_cases/: ask_question.py
scripts/: setup_db.py  validate_pipeline.py
src/app/: bootstrap.py  pipeline.py  registries.py
src/app/factories/: infrastructure.py  llm.py
src/core/domain/: models.py
src/core/interfaces/: __init__.py  db_connector.py  embedding.py  llm.py
src/infra/: __init__.py
src/infra/database/: sqlite_adapter.py
src/infra/embedding/: hf_adapter.py  local_embed_adapter.py  (+1 more)
src/services/: sql_generation.py
tests/: mocks.py  test_flow.py  test_sqlite_adapter.py
(+4 files in other folders)
