[project]
name = "nlp-sql-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-core>=1.2.5",
    "langchain-openai>=1.1.6",
    "langchain-huggingface>=0.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]
