[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nlp_sql_engine"]

[project]
name = "nlp-sql-engine"
version = "0.1.0"
description = "NLP to SQL Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-core>=1.2.5",
    "langchain-openai>=1.1.6",
    "langchain-huggingface>=0.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "numpy>=2.4.0",
    "sqlalchemy>=2.0.45",
    "sqlglot>=28.5.0",
    "pandas>=2.3.3",
]

[project.scripts]
engine = "nlp_sql_engine.app.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
